<resources>
    <string name="app_name">LivingBetter</string>
    <string name="action_settings">Settings</string>
    <string name="login_button_title">Login</string>
    <string name="signup_button_text">Sign up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_home">Search</string>
    <string name="merge">merge</string>

    <string name="title_section1">Search</string>
    <string name="title_section2">To Do List</string>
    <string name="title_section3">Finance</string>

    <string name="btn_add_to_todolist">Add to Todo List</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Search</string>
    <string name="title_activity_habit_main">HabitMainActivity</string>

    <string name="title_activity_search_result">SearchResult</string>
    <string name="title_activity_show_detail">ShowDetail</string>
    <string name="CONSUMER_KEY">tLJ7fVQeoBKgbth2Yfcnxw</string>
    <string name="CONSUMER_SECRET">mgryJLXqN-__uV7jONAkX1mr78U</string>
    <string name="TOKEN">vEwdxU5M6LFII1hgmtmIeBUU7Q7nweXE</string>
    <string name="TOKEN_SECRET">xgdmJdIRqMA-c3y2m5GmxsYyMNk</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search_title">Search</string>
    <string name="search_hint">Anything interested in?</string>
    <string name="title_activity_maps">Map</string>

    <string name="google_map_api_key">AIzaSyBilkZFj47omx5UctqMvcqS2Be49uoLvcY</string>
    <string name="google_map_geocoding_api_key">AIzaSyBw6j5_uW6BCsT8VDp3yuKzLjp7pL2OOH4</string>


    <!-- string for todolist Activity-->
    <string name="todolist_menu_sort">Sort by</string>
    <string name="todolist_menu_display">Display</string>
    <string name="todolist_menu_preference">Settings</string>

    <string name="speech_prompt">What can I do for you?</string>
    <string name="speech_not_supported">Sorry, speech recognition is not supported.</string>

    <string name="todolist_ben_selecttime_text">Pick Time</string>
    <string name="todolist_ben_selectdate_text">Pick Date</string>
    <string name="todolistitem_title">Title</string>
    <string name="btn_confirm_detaildialog">Add</string>
    <string name="delete_confirmation">Are you sure to delete this todo item: </string>
    <string name="btn_clear_detaildialog">Clear</string>
    <string name="todolistitem_description">Description</string>
    <string name="todolist_confirm_text">Confirm</string>
    <string name="todolist_clear_text">Clear</string>
    <string name="todolist_cancel_text">Cancel</string>
    <string name="todoiteminput_edittext_activitytodolist_text">Quick todo item</string>
    <string name="clear_confirmation_dialog_text">Are you sure to clear all fields?</string>
    <string name="display_completed_todoitems">Display Completed ToDoItems</string>
    <string name="display_incompleted_todoitems">Display Incompleted ToDoItems</string>
    <string name="display_notstarted_todoitems">Display Not Started ToDoItems</string>
    <string name="do_you_want_to">Do you want to: </string>
    <string name="please_select_what_to_be_displayed">"Please select what to be displayed: " </string>
    <string name="please_select_a_sorting_standard">"Please select a sorting standard: " </string>
    <string name="completed">"Completed" </string>

    <!-- Menu dialog box radio button text-->
    <string name="sort_menu_radiobutton_sortbydeadline">Sort by Deadline</string>
    <string name="sort_menu_radiobutton_sortbypriority">Sort by Priority</string>
    <string name="sort_menu_radiobutton_sortbytitle">Sort by Title</string>
    <string name="sort_menu_radiobutton_sortbydateandtimecreated">Sort by Time Added</string>
    <string name="sort_menu_radiobutton_displayincompleteditems">Display Incompleted Items</string>
    <string name="sort_menu_radiobutton_displaynotstarteditems">Display Not Started Items</string>
    <string name="sort_menu_radiobutton_displaycompleteditems">Display Completed Items</string>

    <!-- Menu in ToDoItemDetailsActivity-->
    <string name="title_text_share">Share</string>

    <string-array name="priority_level">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="menu_sort_standard">
        <item>Priority</item>
        <item>Deadline</item>
        <item>Time Added</item>
        <item>Title</item>
    </string-array>

    <string-array name="menu_display_standard">
        <item>Incomplete</item>
        <item>Complete</item>
        <item>Not Started</item>
        <item>All</item>
    </string-array>

    <string-array name="todoitem_complete_status">
        <item>Mark as incomplete</item>
        <item>Mark as not started</item>
        <item>Mark as complete</item>
    </string-array>
    <string name="title_activity_test">Map</string>
    <string name="title_activity_maps_activity_new">Map</string>
    <string name="title_activity_maps_activity_for_habit">Map</string>
    <string name="title_activity_setting">Settings</string>


    <string-array name="incomplete_todoitem_operation">
        <item>Mark as completed</item>
        <item>Delete</item>
    </string-array>

    <string-array name="complete_todoitem_operation">
        <item>Mark as incomplete</item>
        <item>Delete</item>
    </string-array>

    <string-array name="simple_todoitem_operation">
        <item>Mark as completed</item>
        <item>Delete</item>
    </string-array>

    <string name="reminderpb_tv_walletmain">expense ratio:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entertainment_tv_fragment_budget">Entertainment: </string>
    <string name="Food_tv_fragment_budget">Eating: </string>
    <string name="Shopping_tv_fragment_budget">Shopping: </string>

    <string name="about">This application entertains you.</string>
    <string name="network_not_available">Network is not available.</string>
    <string name="empty_text_view">Nothing to display.</string>

    <string name="action_sort">Sort</string>

    <string name="preference_latitude">preference_latitude</string>
    <string name="preference_longitude">preference_longitude</string>
    <string name="preference_file_key">preference_file_key</string>

    <string name="share_title_text">How do you want to share?</string>

    <string-array name="components">
        <item>Habit</item>
        <item>ToDoList</item>
        <item>Wallet</item>
    </string-array>

</resources>
